--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,51 @@
+:root {
+  /* colors */
+  --clr-primary: #4281A4;
+  --clr-secondary: #48A9A6;
+  --clr-light: #FFFFFF;
+  --clr-dark: #1E1E1E;
+}
+
 html,
 body {
-  padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
+.button {
+  margin-top: 12px;
+  margin-bottom: 30px;
+}
+
+h1 {
+  color: var(--clr-primary);
+}
+
+span {
+  color: var(--clr-secondary);
+}
+
+a,
+.button {
   color: inherit;
   text-decoration: none;
+}
+
+.danger {
+  color: #ef3737;
+}
+
+.success {
+  color: #3ab958;
+}
+
+a:hover,
+.button:hover {
+  color: var(--clr-primary);
+}
+
+h1 {
+  font-size: 2.4em;
 }
 
 * {
@@ -19,8 +56,9 @@ a {
   html {
     color-scheme: dark;
   }
+
   body {
-    color: white;
-    background: black;
+    color: var(--clr-light);
+    background: var(--clr-dark);
   }
 }
