--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,14 @@
   --clr-dark: #1E1E1E;
 }
 
+.dark {
+  background-color: var(--clr-dark);
+}
+
+.secondary {
+  background-color: var(--clr-secondary);
+}
+
 html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -53,6 +61,7 @@ h1 {
 }
 
 body {
+  padding: 10px !important;
   color: var(--clr-light) !important;
   background: var(--clr-dark) !important;
 }
