--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 :root {
   /* colors */
-  --clr-primary: #4281A4;
-  --clr-secondary: #48A9A6;
+  --clr-primary: #7D938A;
+  --clr-secondary: #D64550;
   --clr-light: #FFFFFF;
   --clr-dark: #1E1E1E;
 }
