--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,24 +1,81 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@200&display=swap');
+
 :root {
   /* colors */
   --clr-primary: #7D938A;
   --clr-secondary: #D64550;
   --clr-light: #FFFFFF;
   --clr-dark: #1E1E1E;
+  --clr-dark-alt: #dcdcdc;
+}
+
+.absolute{
+  position: sticky;
+  left: 0px;
+  top: 0px;
+  height: 100vh;
+}
+
+h1 {
+  font-size: 48px;
+  font-weight: 700;
+
+}
+
+h2 {
+  font-size: 30px;
+  font-weight: 600;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.bg-light {
+  background-color: var(--clr-light);
+}
+
+.bg-dark {
+  background-color: var(--clr-dark);
+}
+
+.bg-dark-alt {
+  background-color: var(--clr-dark-alt);
+}
+
+.bg-secondary {
+  background-color: var(--clr-secondary);
+}
+
+.bg-primary {
+  background-color: var(--clr-primary);
+}
+
+.light {
+  color: var(--clr-light);
+}
+
+.dark {
+  color: var(--clr-dark);
+}
+
+.primary {
+  color: var(--clr-primary);
 }
 
 .secondary {
-  background-color: var(--clr-secondary);
+  color: var(--clr-secondary);
+}
+
+svg, button {
+  background-color: var(--clr-dark);
 }
 
 html,
 body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-.button {
-  margin-top: 12px;
-  margin-bottom: 30px;
+  font-family: 'Roboto', sans-serif;
 }
 
 h1 {
@@ -57,7 +114,7 @@ h1 {
 }
 
 body {
-  padding: 10px !important;
+  margin: none;
   color: var(--clr-dark) !important;
   background: var(--clr-light) !important;
 }
