--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 
 :root {
   /* colors */
@@ -111,12 +111,12 @@ a,
 }
 
 a:hover {
-  filter: drop-shadow(0px 2px 16px var(--clr-primary));
+  filter: drop-shadow(0px 2px 16px var(--clr-dark));
   color: var(--clr-primary);
 }
 
 .button:hover {
-  filter: drop-shadow(0px 2px 16px var(--clr-primary));
+  filter: drop-shadow(0px 2px 16px var(--clr-dark));
   background-color: var(--clr-primary);
 }
 
