--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,8 @@
 
 :root {
   /* colors */
-  --clr-primary: #7D938A;
-  --clr-secondary: #D64550;
+  --clr-primary: #86BAA5;
+  --clr-secondary: #F46873;
   --clr-light: #FFFFFF;
   --clr-dark: #3A3A3A;
   --clr-dark-alt: #dcdcdc;
@@ -108,10 +108,6 @@ body {
 
 h1 {
   color: var(--clr-primary);
-}
-
-span {
-  color: var(--clr-secondary);
 }
 
 a,
