--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,10 +3,12 @@
 :root {
   /* colors */
   --clr-primary: #86BAA5;
+  --clr-altprimary: #3c725d;
   --clr-secondary: #F46873;
   --clr-light: #FFFFFF;
   --clr-dark: #3A3A3A;
   --clr-dark-alt: #dcdcdc;
+  --clr-danger: #F24E1E;
 }
 
 .expandedSiderbar {
@@ -117,11 +119,37 @@ h1 {
   color: var(--clr-primary);
 }
 
-a,
-.button {
+a {
   color: inherit;
   text-decoration: none;
   border: none;
+}
+
+.button {
+  background-color: var(--clr-primary);
+  color: white;
+  text-decoration: none;
+  border: none;
+  box-shadow: 0px 0px 0px var(--clr-dark);
+  transition: box-shadow 300ms ease-in-out;
+}
+
+.button-primary {
+  background-color: var(--clr-primary);
+  color: white;
+  text-decoration: none;
+  border: none;
+  box-shadow: 0px 0px 0px var(--clr-dark);
+  transition: box-shadow 300ms ease-in-out;
+}
+
+.button-danger {
+  background-color: var(--clr-danger);
+  color: white;
+  text-decoration: none;
+  border: none;
+  box-shadow: 0px 0px 0px var(--clr-dark);
+  transition: box-shadow 300ms ease-in-out;
 }
 
 .danger {
@@ -133,13 +161,25 @@ a,
 }
 
 a:hover {
-  filter: drop-shadow(0px 2px 16px var(--clr-dark));
   color: var(--clr-primary);
 }
 
 .button:hover {
-  filter: drop-shadow(0px 2px 16px var(--clr-dark));
-  background-color: var(--clr-primary);
+  box-shadow: 0px 2px 16px var(--clr-dark);
+  color: inherit;
+  background: none;
+}
+
+.button-primary:hover {
+  box-shadow: 0px 2px 16px var(--clr-dark);
+  color: var(--clr-primary);
+  background: none;
+}
+
+.button-danger:hover {
+  box-shadow: 0px 2px 16px var(--clr-dark);
+  color: var(--clr-danger);
+  background: none;
 }
 
 h1 {
