--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 :root {
   /* colors */
   --clr-primary: #86BAA5;
-  --clr-altprimary: #3c725d;
+  --clr-altprimary: #244739;
   --clr-secondary: #F46873;
   --clr-light: #FFFFFF;
   --clr-dark: #3A3A3A;
@@ -38,6 +38,8 @@
   position: relative !important;
   object-fit: cover;
   vertical-align: center;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .sidebar-icon {
@@ -52,11 +54,17 @@
   text-align: center;
   height: 100vh;
   width: 41.7%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .row {
-  margin-right:0 !important;
-  margin-left:0 !important;
+  margin:0 !important;
+}
+
+.col-lg-10 {
+  margin-right: 25px;
 }
 
 @media screen and (min-width: 992px) {
@@ -65,6 +73,7 @@
     left: 0px;
     top: 0px;
     height: 100vh;
+    margin-top: 0;
   }
 }
 
@@ -76,7 +85,8 @@
 
   .sign {
     width: 100%;
-    margin-right:none;
+    margin-right: 0;
+    background: linear-gradient(var(--clr-dark), var(--clr-altprimary));
   }
 }
 
@@ -163,7 +173,7 @@ a {
 }
 
 .button-none {
-  background: none !important;
+  background: none;
   text-decoration: none;
   border: none !important;
   box-shadow: 0px 0px 0px var(--clr-dark);
@@ -233,7 +243,7 @@ h1 {
 }
 
 body {
-  margin: none;
+  margin: 0;
   color: var(--clr-dark);
   background: var(--clr-light);
 }
