--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,15 +37,15 @@
   top: 0px !important;
   height: 100vh !important;
   z-index: 99 !important;
+  width: fit-content !important;
 }
 
 .button_only {
   position: sticky;
   left: 0px !important;
   top: 0px !important;
-  width: 100vh !important;
+  width: 100vw !important;
   z-index: 99 !important;
-  width: fit-content !important;
 }
 
 .bigButton {
